styles/globals.css
:root {
  --primary-50: #ebfdff;
  --primary-100: #ccf6ff;
  --primary-200: #a3eeff;
  --primary-300: #63defd;
  --primary-400: #1ac5f4;
  --primary-500: #00ace0;
  --primary-600: #0382b5;
  --primary-700: #0a6b94;
  --primary-800: #125878;
  --primary-900: #144a66;
  --primary-950: #062f46;
  /*  */
  --gray-50: #f4f6f7;
  --gray-100: #e2e6eb;
  --gray-200: #c9cfd8;
  --gray-300: #a3aebd;
  --gray-400: #76859a;
  --gray-500: #64748b;
  --gray-600: #4e596c;
  --gray-700: #444b5a;
  --gray-800: #3d424d;
  --gray-900: #363a43;
  --gray-950: #21242b;
}

@font-face {
  font-family: "Instrument Sans";
  font-weight: 100 900;
  font-display: block;
  font-style: normal;
  font-named-instance: "Regular";
  src: url("/fonts/InstrumentSans.ttf") format("truetype");
}
@font-face {
  font-family: "Instrument Sans";
  font-weight: 100 900;
  font-display: block;
  font-style: italic;
  font-named-instance: "Italic";
  src: url("/fonts/InstrumentSans-Italic.ttf") format("truetype");
}
html body {
  margin: 0rem;
  padding: 0rem;
  background-color: hsla(186, 100%, 96%, 0.3);
  font-family: "Instrument Sans", sans-serif;
}
.container {
  max-width: 1280px;
  margin: 0rem auto;
  padding: 1rem;
}
.headline {
  margin: 0rem 0rem 0rem 0rem;
  padding: 1rem 0rem 0rem 0rem;
  font-size: clamp(1.8rem, 5vw, 2.5rem);  /* 36px */
  text-transform: capitalize;
  line-height: 2rem; /* 40px */
  color: var(--gray-950);
}
.body {
  margin: 0rem 0rem 0rem 0rem;
  padding: 0.5rem 0rem 1rem 0rem;
  font-size: clamp(0.875rem, 5vw, 1rem);  /* 36px */
  line-height: 1.7rem; /* 28px */
  color: var(--gray-700);
}
.btn_primary {
  width: 100%;
  padding: 0.5rem 1rem;
  border-radius: 0.375rem; 
  border: 1px solid var(--primary-700);
  color: var(--primary-50);
  background-color: var(--primary-700);
  font-size: 0.875rem;
  line-height: 1.25rem; 
  font-weight: 500; 
  text-decoration: none;
  display: inline-flex; 
  justify-content: center; 
  align-items: center; 
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 300ms; 
  text-transform: capitalize;
}
.btn_secondary {
  width: 100%;
  padding: 0.5rem 1rem;
  border-radius: 0.375rem; 
  border: 1px solid var(--primary-100);
  color: var(--primary-950);
  background-color: var(--primary-100);
  font-size: 0.875rem;
  line-height: 1.25rem; 
  font-weight: 500; 
  text-decoration: none;
  display: inline-flex; 
  justify-content: center; 
  align-items: center; 
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 300ms; 
  text-transform: capitalize;
}
.btn_primary:hover {
  cursor: pointer;
  opacity: 0.8;
} 
.btn_secondary:hover {
  cursor: pointer;
  opacity: 0.8;
}
.fadeInAnimation {
  animation: fadeInAnimation ease 3s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}
.order1  {
  order: 1
}
.order2 {
  order: 2
}
@keyframes fadeInAnimation {
  0% {
      opacity: 0;
  }
  100% {
      opacity: 1;
  }
}
@media (min-width: 1024px) {
  .headline {
    font-size: 2.25rem; /* 36px */
    line-height: 2.5rem; /* 40px */
  }
  .body {
    font-size: 1.25rem; /* 20px */
    line-height: 1.75rem; /* 28px */
  }
  .btn_primary {
    width: auto;
  }
  .btn_secondary {
    width: auto;
  }
}

